# learning-django

./: .gitignore  manage.py  pyproject.toml
dict/: urls.py  views.py
dict/templatetags/: filter.py
ldj/: asgi.py  hosts.py  settings.py  urls.py  wsgi.py
ldj/settings/: dev.py  prod.py
seo/: urls.py  views.py
templates/: base.html
templates/dict/: base.html  define.html  home.html  sample.html
templates/seo/: home.html
