[tool.poetry]
name = "learning-django"
version = "0.1.0"
description = ""
authors = ["Aman Rawat <neogamers21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
